add vscode extentions

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,3 +11,6 @@ tasks:
     command: |
       source .venv/bin/activate
       export PIP_USER=false
+vscode:
+  extensions:
+    - ms-python.python
